--- a/bedrock/firefox/templates/firefox/onboarding/fxa-complex.html
+++ b/bedrock/firefox/templates/firefox/onboarding/fxa-complex.html
@@ -20,7 +20,7 @@
 {% endblock %}
 
 {% block onboarding_content %}
-  <section id="formula" data-fxa-iframe-host="{{ settings.FXA_IFRAME_SRC }}">
+  <section id="formula">
     <ol id="steps">
       <li class="step">
         <h3 class="step-header">{{ _('Get Firefox for Android and iOS') }}</h3>
@@ -40,7 +40,7 @@
       </li>
 
       <li class="step" id="step-fxa">
-        <h3 class="step-header">{{ _('Create an account') }}</h3>
+        <h3 class="step-header" id="fxa-iframe-config" data-host="{{ settings.FXA_IFRAME_SRC }}">{{ _('Create an account') }}</h3>
 
         <div id="fxa-wrapper">
           <iframe id="fxa" scrolling="no" data-src="{{ settings.FXA_IFRAME_SRC }}?utm_campaign=fxa-embedded-form&amp;utm_medium=referral&amp;utm_source=firstrun&amp;utm_content=fx-{{ version }}&amp;entrypoint=firstrun&amp;service=sync&amp;context=iframe&amp;style=chromeless&amp;haltAfterSignIn=true"></iframe>
@@ -60,5 +60,5 @@
 {% endblock %}
 
 {% block js %}
-  {% javascript 'firefox_onboarding_fxa_complex' %}
+  {% javascript 'firefox_firstrun' %}
 {% endblock %}
