[fix bug 1273071] Newsletter signup forms on /contribute task pages have non-responsive styling

--- a/bedrock/mozorg/templates/mozorg/contribute/tasks/taskview-base.html
+++ b/bedrock/mozorg/templates/mozorg/contribute/tasks/taskview-base.html
@@ -44,7 +44,7 @@
 {% block email_form %}{% endblock %}
 
 {% block email_form_unwrapped %}
-  <section class="newsletter-module">
+  <section id="newsletter-subscribe" class="light">
     <div class="container">
       {{ email_newsletter_form(newsletters='mozilla-foundation', title=_('Keep in touch with Mozilla. Sign up for our newsletter.'), button_class='dark') }}
     </div>
