[fix bug 1268292] 'Refresh Firefox' button doesn't do anything when clicked

--- a/bedrock/firefox/templates/firefox/new/redesign/scene1.html
+++ b/bedrock/firefox/templates/firefox/new/redesign/scene1.html
@@ -127,5 +127,5 @@
 {% endblock %}
 
 {% block js %}
-  {% javascript 'firefox_new_redesign_scene1' %}
+  {% javascript 'firefox_new_scene1' %}
 {% endblock %}
