[fix bug 1270200] Use correct button styles on /contribute/signup tasks

--- a/bedrock/mozorg/templates/mozorg/contribute/tasks/devtools-challenger.html
+++ b/bedrock/mozorg/templates/mozorg/contribute/tasks/devtools-challenger.html
@@ -14,7 +14,7 @@
 {% block task_content %}
   <section class="get-firefox">
     <p>{{ _('Dev Tools requires Firefox Developer Edition desktop browser. To try this task, download Firefox Developer Edition first.') }}</p>
-    <a href="{{ url('firefox.developer') }}" class="button-blue dev-edition">{{ _('Download Firefox Dev Edition') }}</a>
+    {{ download_firefox('alpha', platform='desktop', alt_copy=_('Download Firefox Dev Edition')) }}
   </section>
 
   <ol class="task-steps">
