--- a/bedrock/mozorg/templates/mozorg/about/leadership.html
+++ b/bedrock/mozorg/templates/mozorg/about/leadership.html
@@ -222,6 +222,19 @@
       </li>
 
       <li class="vcard" itemscope itemtype="http://schema.org/Person">
+        <a class="url" itemprop="url" href="https://blog.mozilla.org/press/bios/alex-salkever/">
+          <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/alex-salkever.jpg') }}">
+          <span class="fn" itemprop="name">Alex Salkever</span>
+        </a>
+        <span class="title" itemprop="jobTitle">{{ _('VP of Marketing Communications') }}</span>
+
+        <ul class="elsewhere">
+          <li><a class="url twitter" itemprop="url" href="https://twitter.com/AlexSalkever">@AlexSalkever</a></li>
+          <li><a class="url book" itemprop="url" href="https://mozillians.org/u/asalkever/">{{ _('Mozillians profile') }}</a></li>
+        </ul>
+      </li>
+
+      <li class="vcard" itemscope itemtype="http://schema.org/Person">
         <a class="url" itemprop="url" href="https://blog.mozilla.org/press/bios/sylvie-veilleux/">
           <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/sylvie-veilleux.jpg') }}">
           <span class="fn" itemprop="name">Sylvie Veilleux</span>
