[fix bug 1257796] Make scene2 of /firefox/new more resilient to unknown platforms

--- a/bedrock/firefox/templates/firefox/new/redesign/scene2.html
+++ b/bedrock/firefox/templates/firefox/new/redesign/scene2.html
@@ -32,7 +32,11 @@
           </div>
 
           <p class="help">
-            {{_('Your Firefox should begin downloading automatically. If not, <a id="%s" href="">click here</a>.')|format('direct-download-link')}}
+            {# fallback_url is replaced by the platform download link via JS, but if
+               something fails the user should still get a link to a working download path. #}
+            {% trans id='direct-download-link', fallback_url=url('firefox.all') %}
+              Your Firefox should begin downloading automatically. If not, <a id="{{ id }}" href="{{ fallback_url }}">click here</a>.
+            {% endtrans %}
           </p>
 
           <aside id="mobile-download">
