update for bug bounty q1 2016

--- a/bedrock/security/templates/security/bug-bounty/web-hall-of-fame.html
+++ b/bedrock/security/templates/security/bug-bounty/web-hall-of-fame.html
@@ -31,6 +31,29 @@
       <p>As of this date, we have paid out almost <b>$1,000,000</b> across all of our bounties. Congratulations to everybody who has participated!</p>
 
       <div class="accordion accordion-auto-init zebra">
+        
+      <section id="year-2016">
+        <h3 data-accordion-role="tab">{{ _('2016') }}</h3>
+        <div data-accordion-role="tabpanel">
+          <h4>1st Quarter 2016</h4>
+          <ul>
+            <li>Ashar Javed</li>
+            <li>Francisco A.</li>
+            <li>Griffin Francis</li>
+            <li>Jose Antonio Perez</li>
+            <li>Luca De Fulgentis</li>
+            <li>Mahadev Subedi</li>
+            <li>Muhammed Gamal</li>
+            <li>Paresh</li>
+            <li>Rafael</li>
+            <li>Robin Puri</li>
+            <li>seb0</li>
+            <li>Sergey Bobrov</li>
+            <li>Tom Prince</li>
+            <li>Wladimir Palant</li>
+          </ul>
+        </div>
+      </section>
 
       <section id="year-2015">
         <h3 data-accordion-role="tab">{{ _('2015') }}</h3>
