Update for bug bounty q1 2016

--- a/bedrock/security/templates/security/bug-bounty/hall-of-fame.html
+++ b/bedrock/security/templates/security/bug-bounty/hall-of-fame.html
@@ -32,6 +32,42 @@
 
       <div class="accordion accordion-auto-init zebra">
 
+      <section id="year-2016">
+        <h3 data-accordion-role="tab">{{ _('2016') }}</h3>
+        <div data-accordion-role="tabpanel">
+          <h4>1st Quarter 2016</h4>
+          <ul>
+            <li>Abdulrahman Alqabandi</li>
+            <li>Abhishek Arya</li>
+            <li>Aki Helin</li>
+            <li>Alexander Klink</li>
+            <li>Chamal</li>
+            <li>Dominique Hazaël-Massieux</li>
+            <li>Frederic Besler @ LAF INTL</li>
+            <li>Frédéric Hoguin</li>
+            <li>Gustavo Grieco</li>
+            <li>Holger Fuhrmannek</li>
+            <li>James Clawson</li>
+            <li>Jason Pang</li>
+            <li>Jordi Chancel</li>
+            <li>Looben Yang</li>
+            <li>Luke Li</li>
+            <li>Muneaki Nishimura</li>
+            <li>musicDespiteEverything</li>
+            <li>Nicolas Golubovic</li>
+            <li>Nicolas Grégoire</li>
+            <li>Nils</li>
+            <li>Philipp Kewisch [:Fallen]</li>
+            <li>Quarkslab security engineer Francis Gabriel</li>
+            <li>Ronald E. Crane, Independent Security Researcher</li>
+            <li>Sascha Just</li>
+            <li>Sergey</li>
+            <li>Tooru Fujisawa [:arai]</li>
+            <li>Tsubasa Iinuma</li>
+          </ul>
+        </div>
+      </section>
+
       <section id="year-2015">
         <h3 data-accordion-role="tab">{{ _('2015') }}</h3>
         <div data-accordion-role="tabpanel">
