[fix bug 1264749] Deprecate CSS support for IE 8.

--- a/bedrock/firefox/templates/firefox/channel.html
+++ b/bedrock/firefox/templates/firefox/channel.html
@@ -24,8 +24,7 @@
 
 {% block body_id %}channel{% endblock %}
 
-{% block site_css %}{% endblock %}
-{% block extrahead %}
+{% block page_css %}
   {% stylesheet 'firefox_channel' %}
 {% endblock %}
 
