--- a/bedrock/firefox/templates/firefox/unsupported-systems.html
+++ b/bedrock/firefox/templates/firefox/unsupported-systems.html
@@ -7,7 +7,7 @@
 {% block page_title %}{{ _('Unsupported Systems') }}{% endblock %}
 {% block page_desc %}{{ _('We’re sorry to report this, but your computer does not meet the minimum system requirements to run this version.') }}{% endblock %}
 
-{% block extrahead %}
+{% block page_css %}
   {% stylesheet 'firefox_unsupported_systems' %}
 {% endblock %}
 
