--- a/bedrock/foundation/templates/foundation/annualreport/2012/index.html
+++ b/bedrock/foundation/templates/foundation/annualreport/2012/index.html
@@ -7,7 +7,7 @@
 {% block page_title %}{{ _('The State of Mozilla: 2012 Annual Report') }}{% endblock %}
 {% block body_id %}annual-2012{% endblock %}
 
-{% block extrahead %}
+{% block page_css %}
   {% stylesheet 'annual_2012' %}
 {% endblock %}
 
