--- a/bedrock/foundation/templates/foundation/annualreport/2013/faq.html
+++ b/bedrock/foundation/templates/foundation/annualreport/2013/faq.html
@@ -9,7 +9,7 @@
 {% block page_title %}{{ _('The State of Mozilla: 2013 Annual Report') }} | {{ _('Frequently Asked Questions') }}{% endblock %}
 {% block body_id %}annual-2013-faq{% endblock %}
 
-{% block extrahead %}
+{% block page_css %}
   {% stylesheet 'annual_2013' %}
 {% endblock %}
 
