--- a/bedrock/foundation/templates/foundation/annualreport/2014/faq.html
+++ b/bedrock/foundation/templates/foundation/annualreport/2014/faq.html
@@ -9,7 +9,7 @@
 {% block page_title %}{{ _('The State of Mozilla: 2014 Annual Report') }} | {{ _('Frequently Asked Questions') }}{% endblock %}
 {% block body_id %}annual-2014-faq{% endblock %}
 
-{% block extrahead %}
+{% block page_css %}
   {% stylesheet 'annual_2014' %}
 {% endblock %}
 
@@ -40,7 +40,7 @@
               </p>
               <p>
               {% trans %}
-                We continued our investment in Firefox for Windows, Mac, and Linux, and Firefox for Android, which allows smartphone users to take the best features of Firefox — from privacy protection to add-ons — anywhere they go. Firefox for Android crossed 100 million downloads in 2015. 
+                We continued our investment in Firefox for Windows, Mac, and Linux, and Firefox for Android, which allows smartphone users to take the best features of Firefox — from privacy protection to add-ons — anywhere they go. Firefox for Android crossed 100 million downloads in 2015.
               {% endtrans %}
               </p>
               <p>
@@ -85,7 +85,7 @@
               </p>
               <p>
               {% trans %}
-                In 2014, Mozilla’s volunteer communities around the globe continued their tireless commitment to the Web. Some 10,000-plus Mozillians taught critical 21st-century skills to individuals of all ages and backgrounds; they translated open source products into a range of new languages; they defended the free and open nature of the Web; and much more. Mozilla’s contributors are the organization’s backbone, a powerful force for good and a perennial inspiration. 
+                In 2014, Mozilla’s volunteer communities around the globe continued their tireless commitment to the Web. Some 10,000-plus Mozillians taught critical 21st-century skills to individuals of all ages and backgrounds; they translated open source products into a range of new languages; they defended the free and open nature of the Web; and much more. Mozilla’s contributors are the organization’s backbone, a powerful force for good and a perennial inspiration.
               {% endtrans %}
               </p>
             </dd>
@@ -175,7 +175,7 @@
               </p>
               <p>
               {% trans %}
-                We’ll continue to build great open source products that help people enjoy the richness of the Internet, and we’re confident that this allows us to identify appropriate sources of revenue that serve both the mission and our users. 
+                We’ll continue to build great open source products that help people enjoy the richness of the Internet, and we’re confident that this allows us to identify appropriate sources of revenue that serve both the mission and our users.
               {% endtrans %}
               </p>
               <p>
@@ -204,7 +204,7 @@
             <dd>
               <p>
               {% trans %}
-                Mozilla is not providing specific projections at this time. 
+                Mozilla is not providing specific projections at this time.
               {% endtrans %}
               </p>
             </dd>
