--- a/bedrock/gigabit/templates/gigabit/gigabit.html
+++ b/bedrock/gigabit/templates/gigabit/gigabit.html
@@ -12,7 +12,7 @@
 {% block site_header_logo %}
 {% endblock %}
 
-{% block extrahead %}
+{% block page_css %}
   {% stylesheet 'gigabit' %}
 {% endblock %}
 
