--- a/bedrock/legal/templates/legal/eula.html
+++ b/bedrock/legal/templates/legal/eula.html
@@ -6,7 +6,7 @@
 
 {% block breadcrumbs %}{% endblock %}
 
-{% block extrahead %}
+{% block page_css %}
   {% stylesheet 'legal-eula' %}
 {% endblock %}
 
