--- a/bedrock/legal/templates/legal/eula/firefox-2-eula.html
+++ b/bedrock/legal/templates/legal/eula/firefox-2-eula.html
@@ -5,7 +5,7 @@
 {% extends "base-resp.html" %}
 {% block body_class %}sand{% endblock %}
 
-{% block extrahead %}
+{% block page_css %}
   {% stylesheet 'legal-eula' %}
 {% endblock %}
 
