--- a/bedrock/mozorg/templates/mozorg/about-base.html
+++ b/bedrock/mozorg/templates/mozorg/about-base.html
@@ -15,8 +15,8 @@
     (url('mozorg.about.policy.patents.index'), _('Patents')),
 ] -%}
 
-{% block extrahead %}
-    {% stylesheet 'about-base' %}
+{% block page_css %}
+  {% stylesheet 'about-base' %}
 {% endblock %}
 
 {% block content %}
