--- a/bedrock/mozorg/templates/mozorg/about/governance/policies/commit/requirements.html
+++ b/bedrock/mozorg/templates/mozorg/about/governance/policies/commit/requirements.html
@@ -7,7 +7,7 @@
 {% block page_title %}{{ _('Commit Access Requirements') }}{% endblock %}
 {% block body_id %}commit-access-requirements{% endblock %}
 
-{% block extrahead %}
+{% block page_css %}
   {{ super() }}
   {% stylesheet 'commit-access-requirements' %}
 {% endblock %}
