--- a/bedrock/mozorg/templates/mozorg/about/governance/policies/security/tld-idn.html
+++ b/bedrock/mozorg/templates/mozorg/about/governance/policies/security/tld-idn.html
@@ -7,7 +7,7 @@
 {% block page_title %}{{ _('IDN-enabled TLDs') }}{% endblock %}
 {% block body_class %}sand{% endblock %}
 
-{% block extrahead %}
+{% block page_css %}
   {% stylesheet 'security-tld-idn' %}
 {% endblock %}
 
