--- a/bedrock/mozorg/templates/mozorg/about/history.html
+++ b/bedrock/mozorg/templates/mozorg/about/history.html
@@ -10,7 +10,7 @@
 {% block body_id %}about-history{% endblock %}
 {% block body_class %}sand{% endblock %}
 
-{% block extrahead %}
+{% block page_css %}
   {% stylesheet 'history-slides' %}
 {% endblock %}
 
