--- a/bedrock/mozorg/templates/mozorg/about/manifesto.html
+++ b/bedrock/mozorg/templates/mozorg/about/manifesto.html
@@ -23,7 +23,7 @@
   data-principle-nav-next='{{ _('Next principle') }}'
 {% endblock %}
 
-{% block extrahead %}
+{% block page_css %}
   {% stylesheet 'manifesto' %}
 {% endblock %}
 
