--- a/bedrock/mozorg/templates/mozorg/contribute/studentambassadors/join.html
+++ b/bedrock/mozorg/templates/mozorg/contribute/studentambassadors/join.html
@@ -6,7 +6,7 @@
 {% block page_title %}{{_('Become a member of Firefox Student Ambassadors!')}}{% endblock %}
 {% block page_desc %}{{ _('Show your university why Firefox rocks and encourage others to get involved with Mozilla.') }}{% endblock %}
 {% block page_image %}{{ static('img/contribute/studentambassadors/hero.jpg') }}{% endblock %}
-{% block extrahead %}
+{% block page_css %}
   {% stylesheet 'contribute-studentambassadors-join' %}
 {% endblock %}
 
