--- a/bedrock/mozorg/templates/mozorg/contribute/studentambassadors/landing.html
+++ b/bedrock/mozorg/templates/mozorg/contribute/studentambassadors/landing.html
@@ -7,7 +7,7 @@
 {% block page_title %}{{ _('Firefox Student Ambassadors') }}{% endblock %}
 {% block page_desc %}{{ _('Individuals who are passionate about Mozilla and raise awareness about the many benefits of Firefox &amp; other Mozilla products - especially <a href="%s">Firefox&nbsp;OS</a>!') }}{% endblock %}
 {% block page_image %}{{ static('img/contribute/studentambassadors/hero.jpg') }}{% endblock %}
-{% block extrahead %}
+{% block page_css %}
   {% stylesheet 'contribute-studentambassadors-landing' %}
 {% endblock %}
 
