--- a/bedrock/mozorg/templates/mozorg/csrf-failure.html
+++ b/bedrock/mozorg/templates/mozorg/csrf-failure.html
@@ -7,7 +7,7 @@
 {% block page_title %}Invalid Request{% endblock %}
 {% block body_id %}csrf-failure{% endblock %}
 
-{% block extrahead %}
+{% block page_css %}
   {% stylesheet 'csrf-failure' %}
 {% endblock %}
 
