--- a/bedrock/mozorg/templates/mozorg/partnerships.html
+++ b/bedrock/mozorg/templates/mozorg/partnerships.html
@@ -7,7 +7,7 @@
 {% block page_title %}Mozilla Partnerships{% endblock %}
 {% block body_id %}partnerships{% endblock %}
 
-{% block extrahead %}
+{% block page_css %}
   {% stylesheet 'partnerships' %}
 {% endblock %}
 
