--- a/bedrock/mozorg/templates/mozorg/plugincheck.html
+++ b/bedrock/mozorg/templates/mozorg/plugincheck.html
@@ -24,7 +24,7 @@
 
 {% block body_id %}plugincheck{% endblock %}
 
-{% block extrahead %}
+{% block page_css %}
   {% stylesheet 'plugincheck' %}
 {% endblock %}
 
