--- a/bedrock/mozorg/templates/mozorg/projects/calendar.html
+++ b/bedrock/mozorg/templates/mozorg/projects/calendar.html
@@ -8,7 +8,7 @@
 {% block page_desc %}{{ _('Organize your life — it&rsquo;s about time!') }}{% endblock %}
 {% block body_id %}calendar-page{% endblock %}
 
-{% block extrahead %}
+{% block page_css %}
   {% stylesheet 'projects-calendar' %}
 {% endblock %}
 
