--- a/bedrock/mozorg/templates/mozorg/projects/holiday-calendars.html
+++ b/bedrock/mozorg/templates/mozorg/projects/holiday-calendars.html
@@ -8,7 +8,7 @@
 {% block page_desc %}{{ _('Holiday calendar data for Lightning') }}{% endblock %}
 {% block body_id %}holiday-calendars{% endblock %}
 
-{% block extrahead %}
+{% block page_css %}
   {% stylesheet 'projects-calendar' %}
 {% endblock %}
 
