--- a/bedrock/privacy/templates/privacy/base-resp.html
+++ b/bedrock/privacy/templates/privacy/base-resp.html
@@ -5,7 +5,7 @@
 {% add_lang_files "privacy/index" %}
 {% extends "base-resp.html" %}
 
-{% block extrahead %}
+{% block page_css %}
   {% stylesheet 'privacy' %}
 {% endblock %}
 
