--- a/bedrock/privacy/templates/privacy/notices/facebook.html
+++ b/bedrock/privacy/templates/privacy/notices/facebook.html
@@ -6,7 +6,7 @@
 
 {% block page_title %}{{ doc.h1.string }}{% endblock %}
 
-{% block extrahead %}
+{% block page_css %}
   {% stylesheet 'fb_privacy' %}
 {% endblock %}
 
