--- a/bedrock/research/templates/research/base.html
+++ b/bedrock/research/templates/research/base.html
@@ -11,7 +11,7 @@
 ] -%}
 {% set active_page = active_page|default('index') -%}
 
-{% block extrahead %}
+{% block page_css %}
  {% stylesheet 'research' %}
 {% endblock %}
 
