--- a/bedrock/base/templates/404.html
+++ b/bedrock/base/templates/404.html
@@ -9,7 +9,7 @@
 
 {% block page_title %}{{ _('404: Page Not Found') }}{% endblock %}
 
-{% block extrahead %}
+{% block page_css %}
   {% stylesheet 'page_not_found' %}
 {% endblock %}
 
