--- a/bedrock/base/templates/500.html
+++ b/bedrock/base/templates/500.html
@@ -4,7 +4,7 @@
 
 {% extends "base-resp.html" %}
 
-{% block extrahead %}
+{% block page_css %}
   {% stylesheet 'page_not_found' %}
 {% endblock %}
 
