--- a/bedrock/firefox/templates/firefox/os/index.html
+++ b/bedrock/firefox/templates/firefox/os/index.html
@@ -33,10 +33,7 @@
 {% block body_id %}firefox-os{% endblock %}
 {% block body_class %}firefox-os v2-5{% endblock %}
 
-{# Do not load CSS bundle specified in base template (duplicate CSS). #}
-{% block site_css %}{% endblock %}
-
-{% block extrahead %}
+{% block page_css %}
   {% stylesheet 'firefox_os_2_5' %}
 {% endblock %}
 
