--- a/bedrock/foundation/templates/foundation/annualreport/2011.html
+++ b/bedrock/foundation/templates/foundation/annualreport/2011.html
@@ -10,7 +10,7 @@
 {% block body_id %}annual-2011{% endblock %}
 {% block body_class %}sand{% endblock %}
 
-{% block extrahead %}
+{% block page_css %}
   {% stylesheet 'annual_2011' %}
   <link rel="stylesheet" media="print" href="{{ static('css/foundation/annual2011print.css') }}">
 {% endblock %}
