--- a/bedrock/foundation/templates/foundation/base-resp.html
+++ b/bedrock/foundation/templates/foundation/base-resp.html
@@ -6,7 +6,7 @@
 
 {% block page_title_suffix %}{% endblock %}
 
-{% block extrahead %}
+{% block page_css %}
   {% stylesheet 'foundation' %}
 {% endblock %}
 
