--- a/bedrock/grants/templates/grants/base.html
+++ b/bedrock/grants/templates/grants/base.html
@@ -6,7 +6,7 @@
 
 {% block body_class %}sand{% endblock %}
 
-{% block extrahead %}
+{% block page_css %}
   {% stylesheet 'grants' %}
 {% endblock %}
 
