--- a/bedrock/mozorg/templates/mozorg/about.html
+++ b/bedrock/mozorg/templates/mozorg/about.html
@@ -8,15 +8,8 @@
 {% block body_id %}about{% endblock %}
 {% block body_class %}sand{% endblock %}
 
-{% block extrahead %}
+{% block page_css %}
   {% stylesheet 'about' %}
-  {# The mosaic won't be loaded on IE8 and below. Adjust the margin of elements to keep the layout #}
-  <!--[if lte IE 8]>
-  <style type="text/css">
-    .js #main-content { margin-top: 100px; }
-    .js #main-content .title-shadow-box { margin-top: -60px; }
-  </style>
-  <![endif]-->
 {% endblock %}
 
 {% block optimizely %}
@@ -39,90 +32,92 @@
 
   <h1 class="title-shadow-box">{{ _('Get to know Mozilla') }}</h1>
 
-  <p class="intro">{{ _('Learn more about our projects, products and principles designed to help people take control and explore the full potential of their lives online.') }}</p>
+  <div class="content-wrapper">
+    <p class="intro">{{ _('Learn more about our projects, products and principles designed to help people take control and explore the full potential of their lives online.') }}</p>
 
-
-  <div class="video">
-    {% if request.locale == 'en-US' %}
-      <div class="moz-video-container">
-        <button class="moz-video-button" type="button" aria-controls="htmlPlayer">{{ _('Play video') }}</button>
-        {{ video('Mozilla_2014_i_am.webm',
-                 'Mozilla_2014_i_am.ogv',
-                 'Mozilla_2014_i_am.mp4',
-                 h=259, w=460,
-                 prefix='//videos.cdn.mozilla.net/uploads/mozillaorg/',
-                 poster=static('img/mozorg/about/poster-i-am.jpg')) }}
-      </div>
-      <p>{{ _('The heart of Mozilla is a global community with a shared mission. Watch the video to meet Mozillians from all over the world and all walks of life.') }}</p>
-    {% else %}
-      <img class="placeholder-img" src="{{ static('img/mozorg/about/poster-i-am.jpg') }}" alt="Mozilla">
-    {% endif %}
-  </div>
-
-  <ul class="links">
-    <li>
-      <h4><a href="{{ url('mozorg.mission') }}">{{ _('The Mozilla mission') }}</a></h4>
-      <p>{{ _('What drives us and makes us different') }}</p>
-    </li>
-    <li>
-      <h4><a href="https://careers.mozilla.org/">{{ _('Career center') }}</a></h4>
-      {% if l10n_has_tag('about_links') %}
-      <p>{{ _('Want to work at Mozilla? Apply today!') }}</p>
+    <div class="video">
+      {% if request.locale == 'en-US' %}
+        <div class="moz-video-container">
+          <button class="moz-video-button" type="button" aria-controls="htmlPlayer">{{ _('Play video') }}</button>
+          {{ video('Mozilla_2014_i_am.webm',
+                   'Mozilla_2014_i_am.ogv',
+                   'Mozilla_2014_i_am.mp4',
+                   h=259, w=460,
+                   prefix='//videos.cdn.mozilla.net/uploads/mozillaorg/',
+                   poster=static('img/mozorg/about/poster-i-am.jpg')) }}
+        </div>
+        <p>{{ _('The heart of Mozilla is a global community with a shared mission. Watch the video to meet Mozillians from all over the world and all walks of life.') }}</p>
       {% else %}
-      <p>{{ _('Want to work on Firefox? Apply today!') }}</p>
+        <img class="placeholder-img" src="{{ static('img/mozorg/about/poster-i-am.jpg') }}" alt="Mozilla">
       {% endif %}
-    </li>
-    <li>
-      <h4><a href="https://blog.mozilla.org/">{{ _('Mozilla blog') }}</a></h4>
-      <p>{{ _('News, notes and ramblings from the Mozilla project') }}</p>
-    </li>
-    <li>
-      <h4><a href="/styleguide">{{ _('Mozilla style guide') }}</a></h4>
-      <p>{{ _('Logos, copy rules, visual assets and more') }}</p>
-    </li>
-    <li>
-      <h4><a href="{{ url('mozorg.contact.spaces.spaces-landing') }}">{{ _('Locations & contacts') }}</a></h4>
-      <p>{{ _('Addresses, emails, support and feedback forms') }}</p>
-    </li>
-    {% if l10n_has_tag('about_links') %}
-    <li>
-      <h4><a href="{{ url('foundation.moco') }} ">{{ _('The Mozilla Corporation') }} </a></h4>
-      <p>{{ _('A corporation that serves the public good. Seriously.') }}</p>
-    </li>
-    {% endif %}
-  </ul>
+    </div>
+  </div>{#-- /.content-wrapper --#}
 
-  <ul class="links">
-    {% if l10n_has_tag('about_leadership') %}
-    <li>
-      <h4><a href="{{ url('mozorg.about.leadership') }}">{{ _('Mozilla leadership') }}</a></h4>
-      <p>{{ _('Our Management Teams, Reps Council and Boards of Directors') }}</p>
-    </li>
-    {% endif %}
-    <li>
-      <h4><a href="{{ url('firefox.family.index') }}">{{ _('Our products') }}</a></h4>
-      <p>{{ _('An overview of what we make and what we’re working on') }}</p>
-    </li>
-    <li>
-      <h4><a href="{{ url('mozorg.contribute') }}">{{ _('Get involved') }}</a></h4>
-      <p>{{ _('Become a volunteer contributor in a number of different areas') }}</p>
-    </li>
-    <li>
-      <h4><a href="{{ press_blog_url() }}">{{ _('Press center') }}</a></h4>
-      <p>{{ _('Press info and other useful stuff') }}</p>
-    </li>
-    <li>
-      <h4><a href="{{ url('privacy') }}">{{ _('Privacy center') }}</a></h4>
-      <p>{{ _('How Mozilla handles your personal information') }}</p>
-    </li>
-    {% if l10n_has_tag('about_links') %}
-    <li>
-      <h4><a href="{{ url('foundation.index') }}">{{ _('The Mozilla Foundation') }}</a></h4>
-      <p>{{ _('The non-profit organization behind Firefox and all Mozilla products') }}</p>
-    </li>
-     {% endif %}
-  </ul>
+  <div class="content-wrapper">
+    <ul class="links">
+      <li>
+        <h4><a href="{{ url('mozorg.mission') }}">{{ _('The Mozilla mission') }}</a></h4>
+        <p>{{ _('What drives us and makes us different') }}</p>
+      </li>
+      <li>
+        <h4><a href="https://careers.mozilla.org/">{{ _('Career center') }}</a></h4>
+        {% if l10n_has_tag('about_links') %}
+        <p>{{ _('Want to work at Mozilla? Apply today!') }}</p>
+        {% else %}
+        <p>{{ _('Want to work on Firefox? Apply today!') }}</p>
+        {% endif %}
+      </li>
+      <li>
+        <h4><a href="https://blog.mozilla.org/">{{ _('Mozilla blog') }}</a></h4>
+        <p>{{ _('News, notes and ramblings from the Mozilla project') }}</p>
+      </li>
+      <li>
+        <h4><a href="/styleguide">{{ _('Mozilla style guide') }}</a></h4>
+        <p>{{ _('Logos, copy rules, visual assets and more') }}</p>
+      </li>
+      <li>
+        <h4><a href="{{ url('mozorg.contact.spaces.spaces-landing') }}">{{ _('Locations & contacts') }}</a></h4>
+        <p>{{ _('Addresses, emails, support and feedback forms') }}</p>
+      </li>
+      {% if l10n_has_tag('about_links') %}
+      <li>
+        <h4><a href="{{ url('foundation.moco') }} ">{{ _('The Mozilla Corporation') }} </a></h4>
+        <p>{{ _('A corporation that serves the public good. Seriously.') }}</p>
+      </li>
+      {% endif %}
+    </ul>
 
+    <ul class="links">
+      {% if l10n_has_tag('about_leadership') %}
+      <li>
+        <h4><a href="{{ url('mozorg.about.leadership') }}">{{ _('Mozilla leadership') }}</a></h4>
+        <p>{{ _('Our Management Teams, Reps Council and Boards of Directors') }}</p>
+      </li>
+      {% endif %}
+      <li>
+        <h4><a href="{{ url('firefox.family.index') }}">{{ _('Our products') }}</a></h4>
+        <p>{{ _('An overview of what we make and what we’re working on') }}</p>
+      </li>
+      <li>
+        <h4><a href="{{ url('mozorg.contribute') }}">{{ _('Get involved') }}</a></h4>
+        <p>{{ _('Become a volunteer contributor in a number of different areas') }}</p>
+      </li>
+      <li>
+        <h4><a href="{{ press_blog_url() }}">{{ _('Press center') }}</a></h4>
+        <p>{{ _('Press info and other useful stuff') }}</p>
+      </li>
+      <li>
+        <h4><a href="{{ url('privacy') }}">{{ _('Privacy center') }}</a></h4>
+        <p>{{ _('How Mozilla handles your personal information') }}</p>
+      </li>
+      {% if l10n_has_tag('about_links') %}
+      <li>
+        <h4><a href="{{ url('foundation.index') }}">{{ _('The Mozilla Foundation') }}</a></h4>
+        <p>{{ _('The non-profit organization behind Firefox and all Mozilla products') }}</p>
+      </li>
+       {% endif %}
+    </ul>
+  </div>{#-- /.content-wrapper --#}
 </article>
 {% endblock %}
 
