--- a/bedrock/mozorg/templates/mozorg/itu.html
+++ b/bedrock/mozorg/templates/mozorg/itu.html
@@ -5,7 +5,7 @@
 {% block body_id %}itu{% endblock %}
 {% block body_class %}sand{% endblock %}
 
-{% block extrahead %}
+{% block page_css %}
   {% stylesheet 'itu' %}
 {% endblock %}
 
