--- a/bedrock/mozorg/templates/mozorg/projects/mozilla-based.html
+++ b/bedrock/mozorg/templates/mozorg/projects/mozilla-based.html
@@ -3,7 +3,7 @@
 {% block page_title %}{{ _('Featured Mozilla-Based Applications') }}{% endblock %}
 {% block body_id %}projects{% endblock %}
 
-{% block extrahead %}
+{% block page_css %}
   {% stylesheet 'projects_mozilla_based' %}
 {% endblock %}
 
