--- a/bedrock/thunderbird/templates/thunderbird/channel.html
+++ b/bedrock/thunderbird/templates/thunderbird/channel.html
@@ -9,7 +9,7 @@
 
 {% block body_id %}channel{% endblock %}
 
-{% block extrahead %}
+{% block page_css %}
   {% stylesheet 'thunderbird-channel' %}
 {% endblock %}
 
