--- a/bedrock/base/templates/macros.html
+++ b/bedrock/base/templates/macros.html
@@ -377,14 +377,14 @@
 </header>{#-- /#fxosnav-header --#}
 {%- endmacro %}
 
-{% macro send_to_device(platform, include_title=True, title_text='', include_logo=False, ios_link='') %}
+{% macro send_to_device(platform, include_title=True, title_text='', include_logo=False, ios_link='', spinner_color='') %}
   {# If no App Store link is specified, use base with default "ct" param value #}
   {# See https://bugzilla.mozilla.org/show_bug.cgi?id=1196310#c23 #}
   {% if ios_link == '' %}
     {% set ios_link = firefox_ios_url('mozorg') %}
   {% endif %}
   {% set android_link = settings.GOOGLE_PLAY_FIREFOX_LINK %}
-  <section id="send-to-device" class="{% if include_logo %}logo {% endif %}{% if include_title %}title{% else %}no-title{% endif %}" data-key="{{ settings.MOZILLA_LOCATION_SERVICES_KEY }}">
+  <section id="send-to-device" class="{% if include_logo %}logo {% endif %}{% if include_title %}title{% else %}no-title{% endif %}" data-key="{{ settings.MOZILLA_LOCATION_SERVICES_KEY }}" {% if spinner_color %}data-spinner-color="{{ spinner_color }}{% endif %}">
     <div class="form-container">
       {% if include_title %}
         <h2 class="form-heading">
