[fix bug 1267573] Bug bounty FAQ - add missing closing slash on <li>

--- a/bedrock/security/templates/security/bug-bounty/faq-webapp.html
+++ b/bedrock/security/templates/security/bug-bounty/faq-webapp.html
@@ -119,7 +119,7 @@
           <ul>
           	<li>www.mozilla.com</li>
           	<li>www.mozilla.org</li>
-          	<li>www.firefox.com<li>
+          	<li>www.firefox.com</li>
           	<li>www.getfirefox.com</li>
           </ul>
 
