Bug 1239386 - Add donations to Thunderbird start page.

--- a/media/css/thunderbird/start.less
+++ b/media/css/thunderbird/start.less
@@ -167,10 +167,6 @@ section {
         margin: .7em 0 0;
     }
 
-    a[href$="Contributing"]:before {
-        background-position: -40px -100px;
-    }
-
     a.more {
         .trailing-arrow;
     }
@@ -196,6 +192,10 @@ footer {
 
         &[href*="blog"]:before {
             background-position: -20px -100px;
+        }
+
+        &[href*="donate"]:before {
+            background-position: -40px -100px;
         }
 
         &[href*="Contributing"]:before {
