Bug 1239386 - Add donations to Thunderbird start page.
Bug 1239386 - update to use if l10n_has_tag('thunderbird_startpage_donate_2016_06')

Bug 1239386 - add back class attr, the css needed for it, and don't conditionally display the donate link

Remove debug (if false) and make donate link go to /thunderbird/ also in the menu.

--- a/media/css/thunderbird/start.less
+++ b/media/css/thunderbird/start.less
@@ -198,6 +198,10 @@ footer {
             background-position: -20px -100px;
         }
 
+        &[href*="donate"]:before {
+            background-position: -40px -100px;
+        }
+
         &[href*="Contributing"]:before {
             background-position: -40px -100px;
         }
