--- a/bedrock/thunderbird/templates/thunderbird/start/release.html
+++ b/bedrock/thunderbird/templates/thunderbird/start/release.html
@@ -11,6 +11,43 @@
       <header>
         <h1>{{ self.title() }}</h1>
       </header>
+      {% if l10n_has_tag('thunderbird_startpage_donate_2016_06') %}
+      <div>
+        <section>
+          <h2>{{ _('Why do we need donations') }}</h2>
+          <p>
+           {{ _('You might already know that Thunderbird improvements are no longer payed for by Mozilla. Fortunately there is an active community keeping it running and developing it further. But to survive long term the project needs funding.') }}
+          </p>
+          <p>
+           {{ _('Thunderbird is currently transitioning to an independent organization. Being independent we can shape our own fate, but there is significant infrastructure that must be maintained to deliver the application to our tens of millions of users. For Thunderbird to survive and continue to evolve, we need your support, and ask for your donation today. All the money donated will go directly to funding Thunderbird development and infrastructure.') }}
+          </p>
+        </section>
+      </div>
+      <div>
+        <section>
+          <h2>{{ _('Donate to Thunderbird') }}</h2>
+          <p>
+            {{ _('Thunderbird is the leading open source, cross-platform email and calendaring client, free for business and personal use. We want it to stay secure and become even better.') }}
+          </p>
+          <p>
+            <strong>
+              {{ _('If you like Thunderbird, please consider a donation!') }}
+            </strong>
+            {{ _('By donating you will help us to continue delivering an ad-free top-notch email client.') }}
+              <a class="more" href="https://donate.mozilla.org/thunderbird/">{{ _('Make a donation') }}</a>
+          </p>
+        </section>
+      </div>
+      <div>
+        <section>
+          <h2>{{ _('Other ways to contribute to Thunderbird') }}</h2>
+          <p>
+             {{ _('Now is a great time for you to get involved: writing code, testing, support, localization and more. Join a global community! Share your skills and pick up a few new ones along the way. Volunteer as much as you like. Or as little. It’s totally up to you.') }}
+              <a class="more" href="https://wiki.mozilla.org/Thunderbird">{{ _('Learn more') }}</a>
+             </p>
+        </section>
+      </div>
+      {% else %}
       <div>
         <section>
           <h2>{{ _('Contribute to Thunderbird') }}</h2>
@@ -21,6 +58,7 @@
           <p><a class="more" href="https://wiki.mozilla.org/Thunderbird">{{ _('Learn more') }}</a></p>
         </section>
       </div>
+      {% endif %}
       <div>
         <section class="help">
           <h2 class="iconic">{{ _('Need Support?') }}</h2>
@@ -34,6 +72,7 @@
           <ul>
             <li><a href="{{ url('thunderbird.features') }}">{{ _('Features') }}</a></li>
             <li><a href="https://blog.mozilla.org/thunderbird/">{{ _('Visit our blog') }}</a></li>
+            <li><a href="https://donate.mozilla.org/thunderbird/">{{ _('Donate') }}</a></li>
             <li><a href="https://wiki.mozilla.org/Thunderbird#Contributing">{{ _('Contribute') }}</a></li>
             <li><a href="https://support.mozilla.org/products/thunderbird/how">{{ _('Tips') }}</a></li>
             <li><a href="https://addons.mozilla.org/thunderbird/">{{ _('Add-ons') }}</a></li>
