--- a/bedrock/base/templates/base-new.html
+++ b/bedrock/base/templates/base-new.html
@@ -127,11 +127,22 @@
     </header>
   {% endblock %}
 
-  {% block content %}{% endblock %}
+  {#--
+  #outer-wrapper is needed (for now...) for nav-main-resp.js hooks. We will
+  refactor nav-main-resp.js in the future to not require #outer-wrapper. This
+  means:
 
-  {% block site_footer %}
-    {% include 'includes/site-footer.html' %}
-  {% endblock %}
+  ******************************************
+  *** DO NOT APPLY CSS TO #outer-wrapper ***
+  ******************************************
+  --#}
+  <div id="outer-wrapper">
+    {% block content %}{% endblock %}
+
+    {% block site_footer %}
+      {% include 'includes/site-footer.html' %}
+    {% endblock %}
+  </div>
 
   <!--[if IE 9]>
     {% javascript 'matchmedia' %}
